# CipherQuorum

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  repository-setup.md
src/cipherquorum/: __init__.py  channel.py  cli.py  discovery.py  share.py  sss.py  transfer.py
tests/: test_share.py  test_sss.py
