[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cipherquorum"
version = "0.1.0"
description = "Threshold secret sharing and encrypted peer transfer over a local network."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "CipherQuorum contributors" }]
keywords = [
  "shamir-secret-sharing",
  "secret-sharing",
  "threshold-cryptography",
  "cryptography",
  "cybersecurity",
  "secret-management",
  "p2p",
  "mdns",
  "zeroconf",
  "aes-gcm",
  "x25519",
  "cli",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security :: Cryptography",
]
dependencies = [
  "cryptography>=42.0.0",
  "zeroconf>=0.132.0",
]

[project.urls]
Homepage = "https://github.com/abhijatchaturvedi/CipherQuorum"
Repository = "https://github.com/abhijatchaturvedi/CipherQuorum"
Issues = "https://github.com/abhijatchaturvedi/CipherQuorum/issues"
Documentation = "https://github.com/abhijatchaturvedi/CipherQuorum/blob/master/docs/architecture.md"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.5.0"]

[project.scripts]
cipherquorum = "cipherquorum.cli:main"
cq = "cipherquorum.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
